fixed right side gap in rows

--- a/src/components/Row.scss
+++ b/src/components/Row.scss
@@ -15,7 +15,7 @@
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    padding: 2rem 4.5rem;
+    padding: 2rem 2.5rem;
     gap: 1.5rem;
 
     -ms-overflow-style: none; /* IE and Edge */
